--- a/style.css
+++ b/style.css
@@ -373,7 +373,7 @@ nav .glyphicon{
 }
 
 /* about us page*/
-
+/* 
 .sub-header{
     height: 50vh;
     width: 100%;
@@ -391,7 +391,7 @@ nav .glyphicon{
 
 .sub-header h1{
     font-size: 70px;
-}
+} */
 
 .clr-btn{
     border: 1px solid #89920d;
@@ -403,8 +403,33 @@ nav .glyphicon{
     color:#fff
 }
 
-@media(max-width: 800px) {
+/* @media(max-width: 800px) {
     .sub-header{
+        height: 60vh;
+    }
+} */
+
+.header-container{
+    height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(85, 85, 27, 0.7)),url(images/about_banner.jpeg);
+    background-position: center;
+    background-size: cover;
+    color: #fff;
+    position: relative;
+}
+
+.header-container nav img{
+    width: 110px;
+    margin-top: -20px;
+}
+
+.header-container h1{
+    font-size: 70px;
+}
+
+@media(max-width: 800px) {
+    .header-container{
         height: 60vh;
     }
 }
