--- a/style.css
+++ b/style.css
@@ -408,7 +408,7 @@ nav .glyphicon{
         height: 60vh;
     }
 }
-
+/* 
 .header-container{
     height: 50vh;
     width: 100%;
@@ -432,7 +432,7 @@ nav .glyphicon{
     .header-container{
         height: 60vh;
     }
-}
+} */
 
 /* contact page */
 
